# hydroutils

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  README.zh.md  environment-dev.yml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docs.yml  pypi.yml
api/hydro_event/: index.html
api/hydro_file/: index.html
api/hydro_log/: index.html
api/hydro_plot/: index.html
api/hydro_s3/: index.html
api/hydro_stat/: index.html
api/hydro_time/: index.html
api/hydro_units/: index.html
api/hydroutils/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  faq.md  hydroutils.md  index.md  installation.md  usage.md
docs/api/: hydro_arithmetric.md  hydro_correct.md  hydro_event.md  hydro_file.md  hydro_log.md  hydro_plot.md  hydro_s3.md  hydro_stat.md  hydro_time.md  hydro_units.md  hydroutils.md
faq/: index.html
hydro_plot/: index.html
hydroutils/: __init__.py  cli.py  hydro_arithmetric.py  hydro_configs.py  hydro_correct.py  hydro_event.py  hydro_file.py  hydro_log.py  hydro_logger.py  hydro_plot.py  hydro_s3.py  hydro_stat.py  hydro_time.py  hydro_units.py  index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_hydro_correct.py  test_hydro_file.py  test_hydro_log.py  test_hydro_plot.py  test_hydro_stat.py  test_hydro_time.py  test_hydro_units.py  test_hydroutils.py  test_s3.py
usage/: index.html
