[project]
name = "hydroutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.17.0",
]
